# axum-server

./: Cargo.toml  README.md  example.http
api/: common.yaml  openapi.yaml  tag-api.yaml  tag-models.yaml  tags-api.yaml
api/tag-service/: api-docs.yaml  common.yaml  entities-api.yaml  entity-models.yaml  store-models.yaml  stores-api.yaml  tag-models.yaml  tags-api.yaml  type-models.yaml  types-api.yaml
api/tenant-config/: api-docs.yaml  common.yaml  custom-function-preset-lists-api.yaml  custom-function-preset-lists-models.yaml  custom-function-presets-api.yaml  custom-function-presets-models.yaml
open_api/: Cargo.toml  README.md
open_api/.openapi-generator/: FILES
open_api/src/: models.rs
open_api/src/apis/: default.rs  farewells.rs  greetings.rs  mod.rs  tags.rs
open_api/src/server/: mod.rs
src/: main.rs
src/db/: mod.rs
src/db/queries/: mod.rs  tag.rs
src/errors/: mod.rs
src/handlers/: farewell.rs  greeting.rs  mod.rs  tag.rs
src/routes/: mod.rs  swagger.rs
src/server/: mod.rs  open_api.rs  swagger.rs
src/services/: mod.rs  tag.rs
