[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-server"
path = "src/main.rs"
test = true   

# [lib]
# name = "openapi"
# path = "generated-api/src/lib.rs"
# features = ["server"]

[dependencies]
axum = "0.8.1"
async-trait = "0.1.88"
listenfd = "1.0.1"
tokio = { version = "1.0", features = ["full"] }
openapi = { path = "open_api", features = ["server"] }
axum-extra = { version = "0.10", features = ["cookie"] }
http = "1"
tower-http = { version = "0.6", features = ["fs"] }
swagger-ui-dist = "5"