[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-server"
path = "src/main.rs"
test = true   

# [lib]
# name = "openapi"
# path = "generated-api/src/lib.rs"
# features = ["server"]

[dependencies]
axum = "0.8.1"
async-trait = "0.1.88"
listenfd = "1.0.1"
tokio = { version = "1.0", features = ["full"] }
openapi = { path = "open_api", features = ["server"] }
axum-extra = { version = "0.10", features = ["cookie"] }
http = "1"
tower-http = { version = "0.6", features = ["fs"] }
swagger-ui-dist = "5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
chrono = "0.4.40"
# google-cloud-auth = "0.18.0"
# google-cloud-spanner-admin-database-v1 = "0.1.0"
# google-cloud-spanner = "0.33.0"
google-cloud-spanner = { package="gcloud-spanner", version="1.0.0" }
tonic = "0.12.3"
uuid = "1.16.0"